--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width">
-    <title>blog </title>
+    <title>NEMO</title>
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
