--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li class="current"><a href="index.html">Home</a></li>
             <li class="current"><a href="CV.pdf">CV</a></li>
             <li class="current"><a href="Projects.html">Project</a></li>
+             <li class="current"><a href="tut2.html">test</a></li>
 
 
           </ul>
