update project work for 2021

--- a/Projects.html
+++ b/Projects.html
@@ -60,7 +60,18 @@
                 </li>
               </ul></li>
           </ul></p>
-
+        <p>
+            <ul style="list-style: none;">
+              <li><b>CS 360 Course Project: Non-Negative Matrix Factorisation and its applications </b><br>
+                <ul>
+                  <li>
+                    I worked with my classmates on a project for CS360 : Introduction to Machine Learning. We worked on the topic of Non-Negative Matrix Factorisation and its Applications.
+                    <a  style="text-decoration: none;" href="https://github.com/YANI-ALT/CS360-NMF-Project" target="_blank">Github</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </p>
         <h4 class='project-title'>Projects 2020</h4>
         <p><ul>
           <li><b>Trash Classifier</b>
