--- a/Projects.html
+++ b/Projects.html
@@ -77,7 +77,7 @@
           <li><b>Trash Classifier</b>
             <ul>
               <li>
-                As a part of the CS344/CS386 Course Projecte I worked with my team on a trash detection pipeling using the TACO dataset.
+                As a part of the CS344/CS386 Course Project I worked with my team on a trash detection pipeling using the TACO dataset.
                 <a  style="text-decoration: none;" href="https://github.com/YANI-ALT/TRASH-detect" target="_blank">Github</a>
               </li>
             </ul>
