--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div id="my_intro" class="boxintro">
         <p class="name">Hi I'm Devyani Maladkar </p>
         <p> I'm currently pursuing my bachelors in Computer Science and Engineering at the Indian Institute of Technology Goa (Yeah I know!).
-        <br><br>I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and i'm excited by Linear Algebra.</p>
+        <br><br>I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and I'm excited by Linear Algebra.</p>
 
       </div>
 
