--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <p class="name">Hi I'm Devyani Maladkar </p>
               <p> I'm currently pursuing my bachelors in Computer Science and Engineering at the Indian Institute of Technology Goa.
               I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and i'm excited by Linear Algebra.
-              In the summer of 2021 I interned at the Machine Leanring and Optimization Lab at EPFL with the <a  style="text-decoration: none;"  href="https://www.epfl.ch/labs/mlo/igh-intelligent-global-health/">Intelligent Global Health</a> research group. Recently I am working as an intern in the Engineering Development Group at MathWorks (Hyderabad).</p>
+              In the summer of 2021 I interned at the Machine Learning and Optimization Lab at EPFL with the <a  style="text-decoration: none;"  href="https://www.epfl.ch/labs/mlo/igh-intelligent-global-health/">Intelligent Global Health</a> research group. Recently I am working as an intern in the Engineering Development Group at MathWorks (Hyderabad).</p>
       
               <h3>Recent Project Work</h3>
               <p><ul style="list-style: none;">
@@ -93,7 +93,7 @@
                 <li>[2020] <b>Trash Classifier</b>
                   <ul>
                     <li>
-                      As a part of the CS344/CS386 Course Projecte I worked with my team on a trash detection pipeling using the TACO dataset.<a  style="text-decoration: none;" href="https://github.com/YANI-ALT/TRASH-detect" target="_blank">Github</a>
+                      As a part of the CS344/CS386 Course Project I worked with my team on a trash detection pipeling using the TACO dataset.<a  style="text-decoration: none;" href="https://github.com/YANI-ALT/TRASH-detect" target="_blank">Github</a>
                     </li>
                   </ul>
                 </li>
