--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- <div class="container">
       <div id="my_intro" class="boxintro">
         <p class="name">Hi I'm Devyani Maladkar </p>
-        <p> I'm currently pursuing my bachelors in Computer Science and Engineering at the <a  style="text-decoration: none;"  href="https://iitgoa.ac.in">Indian Institute of Technology Goa</a> (Yeah I know!).
+        <p> I'm currently pursuing my bachelors in Computer Science and Engineering at the Indian Institute of Technology Goa(Yeah I know!).
         <br><br>I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and I'm excited by Linear Algebra.</p>
 
       </div>
