--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <p class="name">Hi I'm Devyani Maladkar </p>
               <p> I'm currently pursuing my bachelors in Computer Science and Engineering at the Indian Institute of Technology Goa.
               I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and i'm excited by Linear Algebra.
-              In the summer of 2021 I interned at the Machine Learning and Optimization Lab at EPFL with the <a  style="text-decoration: none;"  href="https://www.epfl.ch/labs/mlo/igh-intelligent-global-health/">Intelligent Global Health</a> research group. Recently I am working as an intern in the Engineering Development Group at MathWorks (Hyderabad).</p>
+              In the summer of 2021 I interned at the Machine Learning and Optimization Lab at EPFL with the <a  style="text-decoration: none;"  href="https://www.epfl.ch/labs/mlo/igh-intelligent-global-health/">Intelligent Global Health</a> research group. Recently, I worked as an intern in the Engineering Development Group at MathWorks (Hyderabad).</p>
       
               <h3>Recent Project Work</h3>
               <p><ul style="list-style: none;">
@@ -100,6 +100,11 @@
               </ul></p>
               <h4>Other recent engagements</h4>
               <p><ul style="list-style: none;">
+                <li>[2022] <b>Winter Schools</b>
+                  <ul>
+                    <li>ACM India Winter School 2021-2022 on Quantum Computing Hosted by Indian Institute of Technology Madras Sponsored by TCS Research</li>
+                  </ul>
+                </li>
                 <li>[2021] <b>Summer Schools</b>
                   <ul>
                     <li> Vigyan Vidushi Summer School hosted by Tata Institute of Fundamental Research.</li>
@@ -120,14 +125,14 @@
                     </li>
                   </ul>
                 </li>
-                <li>[2021] <b>IIT BHU Parliamentary Debate 2021 (Varanasi Wordfest - IV edition)</b>
+                <!-- <li>[2021] <b>IIT BHU Parliamentary Debate 2021 (Varanasi Wordfest - IV edition)</b>
                   <ul>
                     <li>
                       The IIT Goa debate team won the Novice Champions Title at the IIT BHU Parliamentary Debate 2021. I was Ranked 30th in Individual Debater
                       rankings for the tournament.
                     </li>
                   </ul>
-                </li>
+                </li> -->
                 
             </ul></p>
             </article>
