--- a/index.html
+++ b/index.html
@@ -81,15 +81,18 @@
               I'm interested in Machine Learning and Artificial Intelligence. I find Mathematics alluring and i'm excited by Linear Algebra.
               In the summer of 2021 I interned at the Machine Learning and Optimization Lab at EPFL with the <a  style="text-decoration: none;"  href="https://www.epfl.ch/labs/mlo/igh-intelligent-global-health/">Intelligent Global Health</a> research group. Recently, I worked as an intern in the Engineering Development Group at MathWorks (Hyderabad).</p>
       
-              <h3>Recent Project Work</h3>
+              <h3>Recent Work</h3>
               <p><ul style="list-style: none;">
+                <li>[2021] <b> Work done as Summer Intern at EPFL : Submitted to <a  style="text-decoration: none;" href="https://site.ghf2022.org/" target="_blank" >Geneva Health Forum </a>for poster presnetation.</b><br>
+                </li>
                 <li>[2021] <b>Measuring Road Mobility from a user's perspective using crowdsourced data </b><br>
                   <ul>
                     <li>
                       Under the guidance of <a  style="text-decoration: none;" href="https://www.cse.iitb.ac.in/~sohoni/" target="_blank">Prof. Milind Sohoni</a> I worked on developing indices to represent user mobility on Indian Roads.
                       We also published an opinion article in the Indian Express titled : "The government wants to build highways for growth. It might not work", the online version can be found <a  style="text-decoration: none;" href="https://indianexpress.com/article/opinion/columns/union-budget-2021-education-infrasructure-highway-roads-construction-7233349/" target="_blank">here</a>.
                     </li>
-                  </ul></li>
+                  </ul>
+                </li>
                 <li>[2020] <b>Trash Classifier</b>
                   <ul>
                     <li>
