--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       
               <h3>Recent Work</h3>
               <p><ul style="list-style: none;">
-                <li>[2021] <b> Work done as Summer Intern at EPFL : Submitted to <a  style="text-decoration: none;" href="https://site.ghf2022.org/" target="_blank" >Geneva Health Forum </a>for poster presnetation.</b><br>
+                <li>[2021] <b> Work done as Summer Intern at EPFL : Submitted to <a  style="text-decoration: none;" href="https://site.ghf2022.org/" target="_blank" >Geneva Health Forum </a>for poster presentation.</b><br>
                 </li>
                 <li>[2021] <b>Measuring Road Mobility from a user's perspective using crowdsourced data </b><br>
                   <ul>
